syntax = "proto3";
package posts;
option go_package = "./internal/posts/delivery/grpc/gen/;gen";

//protoc --go_out=./gen --go-grpc_out=./gen --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

service Post {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse) {}
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {}
  rpc BlockCommentsOnPost(BlockCommentsOnPostRequest) returns (BlockCommentsOnPostResponse) {}
}

message CreatePostRequest {
  int64 UserId = 1;
  string Title = 2;
  string Content = 3;
  bool IsCommented = 4;
}

message CreatePostResponse {
  int64 UserId = 1;
  string Title = 2;
  string Content = 3;
  int64 PostId = 4;
  bool IsCommented = 5;
}

message GetPostByIdRequest {
  int64 PostId = 1;
}

message Comment {
  int64 CommentId = 1;
  int64 UserId = 2;
  int64 PostId = 3;
  string Content = 4;
  repeated Comment Comments = 5;
}

message GetPostByIdResponse {
  int64 UserId = 1;
  string Title = 2;
  string Content = 3;
  int64 PostId = 4;
  bool IsCommented = 5;
  repeated Comment Comments = 6;
}

message CreateCommentRequest {
  int64 UserId = 1;
  int64 PostId = 2;
  int64 CommentParentId = 3;
  string Content = 4;
}

message CreateCommentResponse {
  int64 CommentId = 1;
  int64 UserId = 2;
  int64 PostId = 3;
  int64 CommentParentId = 4;
  string Content = 5;
}

message BlockCommentsOnPostRequest {
  int64 UserId = 1;
  int64 PostId = 2;
}

message BlockCommentsOnPostResponse {
}